spacing fixes

--- a/src/assets/scss/components/02_molecules/topics.scss
+++ b/src/assets/scss/components/02_molecules/topics.scss
@@ -5,10 +5,10 @@
 
     .topic-header {
         margin-top: 40px;
-        margin-bottom: 100px;
+        margin-bottom: 40px;
 
         .topic-title {
-            margin-bottom: 80px;
+            margin-bottom: 40px;
         }
     }
 
